--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.input :email %>
     <%= f.input :phone %>
     <%= f.input :emergency_phone %>
+    <%= f.input :pic %>
   </div>
 
   <div class="form-actions">
