--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
           <%= link_to 'Pup Share', root_path, class: 'navbar-brand'  %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#"></a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%#= link_to 'All Jobs', user_jobs_path(current_user) %>
+            <li><%#= link_to 'All Availabilities', user_jobs_path(current_user) %>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
@@ -57,6 +58,7 @@
     <br>
     <br>
     <br>
+
     <!--     
 <footer class="footer">
 <p>Footer stuff goes down here. &copy 2015, etc.</p>
