--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,13 @@
           <%= link_to 'Pup Share', root_path, class: 'navbar-brand'  %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><%#= link_to 'All Jobs', user_jobs_path(current_user) %>
-            <li><%#= link_to 'All Availabilities', user_jobs_path(current_user) %>
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to 'All Jobs', jobs_path %>
+            <li><%= link_to 'All Availabilities', availabilities_path %>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
+            <li><%= link_to 'Me', user_path(current_user) %>            
             <li><%= link_to 'My Jobs', user_jobs_path(current_user) %>
             <li><%= link_to 'My Availabilities', user_availabilities_path(current_user) %>
             <li><%= link_to 'My Pups', user_pups_path(current_user) %>
