--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,11 @@
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
             <li><%= link_to 'Profile', user_path(current_user) %>            
-            <li><%= link_to 'My Jobs', user_jobs_path(current_user) %>
-            <li><%= link_to 'My Availabilities', user_availabilities_path(current_user) %>
-            <li><%= link_to 'My Pups', user_pups_path(current_user) %>
+            <li><%= link_to 'Jobs', user_jobs_path(current_user) %>
+            <li><%= link_to 'Availabilities', user_availabilities_path(current_user) %>
+            <li><%= link_to 'Pups', user_pups_path(current_user) %>
+            <li><%= link_to 'Requests', user_requests_path(current_user) %>
+            <li><%= link_to 'Upcoming Walks', user_requests_path(current_user, status: 'approved') %>
             <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
             <% else %>
             <li><%= link_to 'Sign In', new_user_session_path %></li>
