--- a/app/views/walk_request/walk_request.html.erb
+++ b/app/views/walk_request/walk_request.html.erb
@@ -1,9 +1,8 @@
-
 <p><strong>
-  <%= link_to 'Approve', approve_walk_request_job_url(@job) %>
+  <%#= link_to 'Approve', approve_walk_request_job_url(@job) %>
   </strong></p>
 <p><strong>
-  <%= link_to 'Decline', deny_walk_request_job_url(@job) %>
+  <%#= link_to 'Decline', deny_walk_request_job_url(@job) %>
   </strong></p>
 <%= render 'walk_request_details' %>
 <br>
