--- a/app/views/walk_request/_walk_request_details.html.erb
+++ b/app/views/walk_request/_walk_request_details.html.erb
@@ -1,9 +1,9 @@
-<p><strong>Pup owner: <%= @job.user.email %></strong></p>
-<p><strong>Walker: <%= @walker.email %></strong></p>
+<p><strong>Pup owner: <%= @request.requested_of_user.email %></strong></p>
+<p><strong>Walker: <%= @request.user.email %></strong></p>
 <br>
-<p>Drop off: <%= @job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
-<p>Place: <%= @job.drop_off_location %></p>
-<p>Pick up: <%= @job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
-<p>Place: <%= @job.pick_up_location %></p>
+<p>Drop off: <%= @request.job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
+<p>Place: <%= @request.job.drop_off_location %></p>
+<p>Pick up: <%= @request.job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
+<p>Place: <%= @request.job.pick_up_location %></p>
 
  
