--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,28 @@
-<h1>Find an Amazonian to walk your pup</h1>
+<div class="col-md-12 banner">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div>
+  <p><%= link_to "Walk an Amazonian's pup", jobs_path, class: 'btn btn-primary btn-xlarge' %></p>
+
+  <br>
+
+  <p><%= link_to "Have your pup walked by an Amazonian", availabilities_path, class: 'btn btn-primary btn-xlarge' %></p>
+</div>
