--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,13 @@
     </nav> 
     <!-- end navbar -->
 
+    <% if notice.present? %>		
+    <p class="alert alert-info"><%= notice %></p>		
+    <% end %>		
+    <% if alert.present? %>		
+    <p class="alert alert-danger"><%= alert %></p>		
+    <% end %>
+
     <div class="row">
       <div class="col-md-3">
       </div>
