minor ux changes

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,13 +8,13 @@
 
   <div class="row">
 
-    <div class="col-md-3">
+    <div class="col-md-4">
       <%= image_tag job.user.pic, :class => 'img-responsive' %>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <%= image_tag job.pup.pup_pic, :class => 'img-responsive' %>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <p>Name: <%= job.pup.pup_name %></p>
       <p>Drop off: <%= job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.drop_off_location %></p>
@@ -25,17 +25,18 @@
       <% end %>
     </div>
     <div class="col-md-3">
-      <% @current_request = Request.where(job_id: job).last %> 
-      <% if !@current_request.nil? %>
-      <%= image_tag @current_request.user.pic, :class => 'img-responsive' %>
-      <% else %>
-      <%= simple_form_for Request.new, url: requests_path(current_user, request: {user_id: current_user, requested_of_user_id: job.user, job_id: job, status: 'pending'}), method: :post do |f| %>
+      <%= simple_form_for Request.new, url: requests_path(current_user, 
+  request: {
+    user_id: current_user, 
+    requested_of_user_id: job.user, 
+    job_id: job, 
+    status: 'pending'}), 
+method: :post do |f| %>
       <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success btn-lg'%>
-      <% end %>
       <% end %>
     </div>
   </div>
-</div>
+</div><!-- booyah-box -->
 
 <br>
 <% end %>
