--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,12 @@
 <p><%= image_tag @user.pic, :class => 'img-responsive'  %></p>
 
 <p><strong>First name:</strong><%= @user.first_name %></p>
-
 <p><strong>Last name:</strong><%= @user.last_name %></p>
-
 <p><strong>Email:</strong><%= @user.email %></p>
-
 <p><strong>Phone:</strong><%= @user.phone %></p>
-
 <p><strong>Emergency phone:</strong><%= @user.emergency_phone %></p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %>
+
+<%= link_to 'Edit', edit_user_path(@user), %>
 
