--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -23,18 +23,20 @@
       <% if job.user == current_user %>
       <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %>
       <% end %>
-    </div>
-    <% if job.user != current_user %>
-    <%= simple_form_for Request.new, url: requests_path(current_user, 
+
+      <% if job.user != current_user %>
+      <%# logged in as walker %>
+      <%= simple_form_for Request.new, url: requests_path(current_user, 
   request: {
     user_id: current_user, 
     requested_of_user_id: job.user, 
-    job_id: job, 
+    job_id: job,
     status: 'pending'}), 
 method: :post do |f| %>
-    <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success btn-xs'%>
-    <% end %>
-    <% end %>
+      <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success btn-xs'%>
+      <% end %>
+      <% end %>
+    </div>
   </div>
 </div><!-- booyah-box -->
 
