--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'New Job', new_job_path, class: 'btn btn-primary' %>
 
-<h1>These pups need a walk!</h1>
+<h1>Pups</h1>
 
 <% @jobs.each do |job| %>
 <% if job.user != current_user # do not show a user own jobs  %>
@@ -8,9 +8,11 @@
 <div class="booyah-box">
   <div class="row">
     <div class="col-md-4">
+      <%= link_to "#{job.user.email}", user_path(job.user)  %>
       <%= image_tag job.user.pic, :class => 'img-responsive' %>
     </div>
     <div class="col-md-4">
+      <%= link_to "#{job.pup.pup_name}", user_path(job.user)  %>
       <%= image_tag job.pup.pup_pic, :class => 'img-responsive' %>
     </div>
     <div class="col-md-4">
