--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to 'All Jobs', jobs_path %>
-            <li><%= link_to 'All Availabilities', availabilities_path %>
+            <li><%= link_to 'Walk a Pup', jobs_path %>
+            <li><%= link_to 'Find a Walker', availabilities_path %>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
