--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,15 +8,14 @@
 <div class="booyah-box">
   <div class="row">
     <div class="col-md-4">
-      <%= link_to "#{job.user.email}", user_path(job.user)  %>
+      <%= "#{job.user.email}" %>
       <%= image_tag job.user.pic, :class => 'img-responsive' %>
     </div>
     <div class="col-md-4">
-      <%= link_to "#{job.pup.pup_name}", user_path(job.user)  %>
+      <%= "#{job.pup.pup_name}" %>
       <%= image_tag job.pup.pup_pic, :class => 'img-responsive' %>
     </div>
     <div class="col-md-4">
-      <p>Name: <%= job.pup.pup_name %></p>
       <p>Drop off: <%= job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.drop_off_location %></p>
       <p>Pick up: <%= job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
