--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,31 @@
 <%= simple_form_for(@user) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
+<div class="form-inputs">
+  <div class="col-md-5">  
     <%= f.input :first_name %>
     <%= f.input :last_name %>
+    <%= f.input :email %>
+    <%= f.input :phone %>   
+    <%= f.input :emergency_phone %>
     <%= f.input :building %>
     <%= f.input :address %>
-    <%= f.input :email %>
-    <%= f.input :phone %>
-    <%= f.input :emergency_phone %>
     <%= f.input :pic %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: 'btn btn-success' %>
+  <div class="col-md-5">  
+    <%= f.input :small_pups %>
+    <%= f.input :medium_pups %>
+    <%= f.input :large_pups %>
+    <%= f.input :giant_pups %>   
+    <%= f.input :puppies %>
+    <%= f.input :senior_pups %>
+    <%= f.input :pups_w_special_needs %>
+    <%= f.input :oral_med_admin %>
   </div>
+</div>
+
+<div class="form-actions">
+  <%= f.button :submit, class: 'btn btn-success' %>
+</div>
 <% end %>
