add static pages and bottom nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,11 +57,13 @@
     <br>
     <br>
 
-    <!--     
-<footer class="footer">
-<p>Footer stuff goes down here. &copy 2015, etc.</p>
-</footer> 
--->
+    <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+      <%= link_to 'About', about_path %>
+      <%= link_to 'Terms of Service', terms_of_service_path %>
+      <%= link_to 'Privacy Policy', privacy_policy_path %>
+      <br>
+      &copy 2015, etc.
+    </div>
 
   </body>
 </html>
