--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,6 +1,4 @@
-<% jobs.each do |job| %>
-
-<% if job.user != current_user # do not show a user own jobs  %>
+<%# if job.user != current_user # do not show a user own jobs  %>
 
 <div class="booyah-box">
   <div class="row">
@@ -27,6 +25,5 @@
   </div><!-- row -->
 </div><!-- booyah-box -->
 
-<% end %>
+<%# end %>
 <br>
-<% end %>
